# cmake-visual-studio-demo

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
cmake/: Common.cmake  CompilerWarnings.cmake
src/: CMakeLists.txt  main.cpp  utils.hpp
